2000-03-04  NotZed  <NotZed@HelixCode.com>

	* filter-druid.c (html_write_options): Output 'and' bits between
	the rules.

	* filter-driver.c (main): Actually implement filtering, at least,
	from Inbox.  Copy messages to folder (in the same store only, so
	far), delete, and stop processing are implemented, and the logic
	to handle default processing.

	* filter-xml.c (load_optionvalue): Fix up a bug where we lost the
	name of the arg (ouch).
	* filter-xml.c: Wrapped printf's in debug macros.

2000-03-02  NotZed  <NotZed@HelixCode.com>

	* filter-druid.c (object_destroy): Disconnect the list signal, so
	we dont get spurious emits during destroy.
	(arg_changed): Callback to update filter arg asynchronously.
	(arg_link_clicked): Edit the value non-modally.

	* filter-arg.c (filter_arg_edit_values_1): Changed to use
	non-modal interface.

2000-03-01  Ettore Perazzoli  <ettore@helixcode.com>

	* Makefile.am: New file.

	* Makefile: Removed.  I wonder why we are using plain Makefiles
	instead of automake Makefiles at all.

2000-02-29  NotZed  <NotZed@HelixCode.com>

	* filter-driver.c (main): Remove gui code, this will be actual
	filtering code.

	* Makefile: Added filter-editor to the library.

	* filter-editor.c (main): Comment out, make it a proper library.

2000-02-28  NotZed  <NotZed@HelixCode.com>

	* filter-druid.c: Removed unused header.

	* Makefile: Removed references to filter-sexp.[ch].

	* filter-sexp.[ch]: Removed some unecessary includes.  Moved to
	e-util.  Renamed callers.

2000-02-24  NotZed  <NotZed@HelixCode.com>

	* filter-xml.c (filter_description_free): 
	(filter_load_ruleset_free): 
	(filter_load_optionset_free): Functions for memory management.

	* filter-arg.c (filter_arg_copy): Copy the values of one arg into
	another.

	* filter-editor.c: New widget, a dialogue which uses filter-druid
	to present the various editing views.
	(druid_dialogue_clicked): On finish, save the user's new filter
	definition where it came from.
